# particle-simulation

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  build_docker.sh  pyproject.toml  run_docker.sh
additional_files/: simple_config.yaml  simulation_config.yaml  vis.mac  vis_curved.mac  vis_flat.mac
additional_files/data_files/: density_temp_height.csv  density_temp_height.json  proton_cosmic_flux.txt
additional_files/macro_files/: gps_curved.mac  gps_flat.mac  gps_flat_truncated.mac  vis_curved.mac  vis_flat.mac
docs/: density_profiles.md  input_parameters.md  output_files.md  running_params.md
particle_simulation/: __main__.py  action.py  config.py  construction.py  detector.py  download_geant4_datasets.py  generator.py  icos_sim.py  physics.py  results.py  runner.py  utils.py
test_data/: geometry.gdml  geometry_curved.gdml  geometry_flat.gdml  mag_field_vigo.csv
