[tool.poetry]
name = "particle-simulation"
version = "0.1.0"
description = ""
authors = ["Fernando Carmona <fernando.carmona@logicmelt.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
