[tool.poetry]
name = "particle-simulation"
version = "0.1.0"
description = ""
authors = ["Fernando Carmona <fernando.carmona@logicmelt.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
geant4-pybind = "^0.1.0b17"
pyyaml = "^6.0.1"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
requests = "^2.32.3"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
pygeomag = "^1.0.2"
scipy = "^1.14.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
